fix: move devDependencies & fix build

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,11 @@
     "plugin:react/jsx-runtime",
     "plugin:prettier/recommended"
   ],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "parserOptions": {
     "sourceType": "module"
   },
