--- a/package.json
+++ b/package.json
@@ -3,15 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.3.0",
-    "@testing-library/user-event": "14.2.0",
     "chart.js": "^3.8.0",
     "classnames": "2.3.1",
-    "eslint": "^8.6.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.30.0",
-    "prettier": "2.6.2",
     "react": "18.1.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "18.1.0",
@@ -42,10 +35,19 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "all-contributors-cli": "^6.20.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react": "^1.1.7",
-    "sass": "1.52.3"
+    "eslint-config-react-app": "^7.0.1",
+    "sass": "1.52.3",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "14.2.0",
+    "eslint": "^9.13.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "^7.37.2",
+    "prettier": "2.6.2"
   }
 }
